--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@alch/alchemy-web3": "^1.2.3",
+    "coingecko-api": "^1.0.10",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2"
